# class_data_analysis_I

./: .gitignore  Colab_使い方.ipynb  LICENSE  README.md  pyproject.toml
notebooks/: Colab_使い方.ipynb  StackOverflow.ipynb  generation_AI.ipynb  オブジェクト.ipynb  クラス.ipynb  スモールデータ.ipynb  チュートリアル.ipynb  データ構造.ipynb  モジュール.ipynb  ループ処理.ipynb  条件分岐.ipynb  自学自習.ipynb  関数定義.ipynb
notebooks/assignment/: assignment1.ipynb  assignment2.ipynb  assignment3.ipynb  final_assignment.ipynb
