[tool.poetry]
name = "class-data-analysis-i"
version = "0.1.0"
description = ""
authors = ["takahiro.miura <takamiura12@gmail.com>"]
readme = "README.md"
packages = [{include = "class_data_analysis_i"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
